# ics-transaid

./: .gitignore  .gitmodules  Dockerfile  build_all.sh  iTETRIS_installation_ubuntu.txt  iTETRIS_quick_installation_ubuntu.txt  index.html  index.html.20210421_190039_319538  index.html.20210423_005241_482682  index.html.20210430_005559_077480  index.html.20210507_005007_536261  index.html.20210514_013818_625583  index.html.20210521_013539_657111  index.html.20210528_015729_335467  index.html.20210604_022836_749233  index.html.20210611_013135_412843  index.html.20210618_012558_282397  index.html.20210625_011336_410352  install_all.sh  rebuild_all.sh  rebuild_all_debug.sh  setenv.sh
LightCommSimulator/src/: Makefile.am  config.h  current-time.cpp  current-time.h  lightcomm  lightcomm-main.cpp  program-configuration.cpp  program-configuration.h  windows-config.h
LightCommSimulator/src/foreign/tcpip/: Makefile.am  server-socket.cpp  server-socket.h  storage.cpp  storage.h
LightCommSimulator/src/helper/: Makefile.am  callback.h  empty.h  fatal-error.h  output-helper.h  random-variable.h  rng-seed-manager.cpp  rng-stream.cpp  scheduler.cpp  scheduler.h  trace-manager.cpp  traced-callback.h
LightCommSimulator/src/server/: Makefile.am  circular-buffer.h  lightcomm-constants.h  server.cpp  server.h
LightCommSimulator/src/utils/: Makefile.am
LightCommSimulator/src/utils/exception/: UtilExceptions.h
LightCommSimulator/src/utils/log/: Makefile.am  ToString.h  console.cpp  log.h
LightCommSimulator/src/utils/xml/: Makefile.am
iCS/: .cproject  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.cvs  README  ReadMe.html  ReadMe.md  configure  configure.ac
iCS/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
iCS/docs/: iCS.doxyfile  iTetris - iCS UML.vsd
iCS/src/: .cproject  .project  Makefile.am  config.h.in~  iCS.doxyfile  iCS_main.cpp  version.h  windows_config.h
iCS/src/foreign/: Makefile.am  additional.txt
iCS/src/foreign/tcpip/: socket.cpp  socket.h  storage.cpp  storage.h
iCS/src/ics/: FacilitiesManager.cpp  FacilitiesManager.h  fixed-node.cpp  fixed-node.h  ics.cpp  ics.h  ics.h.autosave  itetris-node.cpp  itetris-node.h  itetris-simulation-config.cpp  itetris-simulation-config.h  sync-manager.cpp  sync-manager.h  tmc-node.cpp  tmc-node.h  utilities.cpp  utilities.h  vehicle-node.cpp  vehicle-node.h
iCS/src/ics/applications_manager/: Makefile.am  app-commands-subscriptions-constants.h  app-message-manager.cpp  app-message-manager.h  app-result-container.cpp  app-result-container.h  app-result-generic.cpp  app-result-generic.h  app-result-maximum-speed.cpp  app-result-maximum-speed.h  app-result-open-buslanes.cpp  app-result-open-buslanes.h  app-result-traffic-jam-detection.cpp  app-result-traffic-jam-detection.h  app-result-travel-time.cpp  app-result-travel-time.h  app-result-void.cpp  app-result-void.h  application-handler.cpp  application-handler.h  subs-app-cmd-traff-sim.cpp  subs-app-cmd-traff-sim.cpp~  subs-app-cmd-traff-sim.h  subs-app-control-traci.cpp  subs-app-control-traci.h  subs-app-message-receive.cpp  subs-app-message-receive.cpp~  subs-app-message-receive.h  subs-app-message-send.cpp  subs-app-message-send.h  subs-app-pull-traci.cpp  subs-app-pull-traci.h  subs-app-push-traci.cpp  subs-app-push-traci.h  subs-app-result-traff-sim.cpp  subs-app-result-traff-sim.h  subs-calculate-travel-time.cpp  subs-calculate-travel-time.h  subs-get-facilities-info.cpp  subs-get-facilities-info.h  (+23 more)
iCS/src/ics/configfile_parsers/: LDMrules-configfile-parser.cpp  LDMrules-configfile-parser.h  Makefile.am  apps-configfile-parser.cpp  (+7 more)
iCS/src/unittest/: Makefile.am  iCSSumoFormat_unitTests.cpp  newStyle_locationOnly.xml  oldStyle_locationOnly.xml  singleEdge.xml
iCS/src/utils/: Makefile.am
iCS/tests/: config_all  iCSrunner.py  runTests.sh
iCS/tests/iCS/: config.icsapp  testsuite.icsapp
iTETRIS-Applications/baseApp/: CMakeLists.txt  configure.ac
iTETRIS-Applications/baseApp/docs/: testApp.doxyfile
iTETRIS-Applications/baseApp/src/: Makefile.am  app-commands-subscriptions-constants.h  app-main.cpp  current-time.cpp  current-time.h  program-configuration.cpp  program-configuration.h  structs.h
iTETRIS-Applications/exampleApp/src/: Makefile.am  app-main.cpp  exampleApp
iTETRIS-Applications/protocolspeed/: configure.ac
iTETRIS-Applications/protocolspeed/src/: Makefile.am  app-main.cpp  speed-configuration.cpp  speed-configuration.h
iTETRIS-Applications/testApp/: Add_a_testApp_testcase.txt  Apps.files  Apps.includes  CMakeLists.txt  configure.ac  doxygen.config
iTETRIS-Applications/testApp/acosta/: app-data.csv  app-data.txt  application-config-file.xml  data-postprocess.sh  ics-log-50.txt  itetris-config-file-gui-ns3.20.xml  log.txt
iTETRIS-Applications/testApp/pasubio/: facilities-config-file.xml  itetris-config-file-ns3.20.xml  protocol-config-file.xml  stations-config-file.xml
iTETRIS-Applications/testApp/src/: Makefile.am  app-main.cpp  config.h  current-time.cpp  current-time.h  program-configuration.cpp  program-configuration.h  structs.h
iTETRIS-Applications/testApp/testMobility/: app-log.txt  app-ns-log.txt  log.txt  netstate.xml
iTETRIS-Applications/testApp/testScenario/: app-data.txt  app-log.txt  app-ns-log.txt  application-config-file.xml  comm-protocol-parser.py  ics-log-50.txt  itetris-config-file-gui-ns3.20.xml  itetris-config-file-ns3.20.xml  test-config-file.xml  test_NAR.csv  test_NIR.csv  test_PDR.csv  test_PDR_CAM.csv  test_PDR_CPM.csv  test_PDR_MCM.csv
iTETRIS-Applications/testApp/testToC/: app-log.txt  app-ns-log.txt  log.icsapp  log.txt  netstate.xml
iTETRIS-Applications/testApp/testTrajectory/: app-log.txt  app-ns-log.txt  log.txt  netstate.xml
iTETRIS-Applications/traffic-monitor/src/: Makefile.am  app-commands-subscriptions-constants.h  app-main.cpp  current-time.cpp  current-time.h  program-configuration.cpp  program-configuration.h  structs.h  windows-config.h
iTETRIS-Applications/transaidUC1App/src/: Makefile.am  app-main.cpp
iTETRIS-Applications/transaidUC5App/src/: Makefile.am  app-main.cpp
(+4864 files in other folders)
