cmake_minimum_required(VERSION 3.13)
project(baseApp)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/application)
include_directories(src/application/helper)
include_directories(src/application/model)
include_directories(src/server)
include_directories(src/utils/exception)
include_directories(src/utils/log)
include_directories(src/utils/xml)

add_executable(baseApp
        src/application/helper/callback.h
        src/application/helper/empty.h
        src/application/helper/fatal-error.h
        src/application/helper/output-helper.cpp
        src/application/helper/output-helper.h
        src/application/helper/random-variable.cpp
        src/application/helper/random-variable.h
        src/application/helper/rng-seed-manager.cpp
        src/application/helper/rng-seed-manager.h
        src/application/helper/rng-stream.cpp
        src/application/helper/rng-stream.h
        src/application/helper/scheduler.cpp
        src/application/helper/scheduler.h
        src/application/helper/trace-manager.cpp
        src/application/helper/trace-manager.h
        src/application/helper/traced-callback.h
        src/application/helper/vector.cpp
        src/application/helper/vector.h
        src/application/model/behaviour-factory.h
        src/application/model/behaviour-node.cpp
        src/application/model/behaviour-node.h
        src/application/model/behaviour-rsu.cpp
        src/application/model/behaviour-rsu.h
        src/application/model/behaviour.cpp
        src/application/model/behaviour.h
        src/application/model/common.cpp
        src/application/model/common.h
        src/application/model/headers.cpp
        src/application/model/headers.h
        src/application/model/ics-interface.cpp
        src/application/model/ics-interface.h
        src/application/model/node-sampler.cpp
        src/application/model/node-sampler.h
        src/application/fixed-station.cpp
        src/application/fixed-station.h
        src/application/mobile-node.cpp
        src/application/mobile-node.h
        src/application/node.cpp
        src/application/node.h
        src/application/split.h
        src/application/subscription-helper.cpp
        src/application/subscription-helper.h
        src/application/traci-helper.cpp
        src/application/traci-helper.h
        src/application/traffic-light.cpp
        src/application/traffic-light.h
        src/server/circular-buffer.h
        src/server/node-handler.cpp
        src/server/node-handler.h
        src/server/payload-storage.cpp
        src/server/payload-storage.h
        src/server/payload.cpp
        src/server/payload.h
        src/server/server.cpp
        src/server/server.h
        src/utils/exception/UtilExceptions.h
        src/utils/log/console.cpp
        src/utils/log/console.h
        src/utils/log/log.cpp
        src/utils/log/log.h
        src/utils/log/ToString.h
        src/utils/xml/tinyxml2.cpp
        src/utils/xml/tinyxml2.h
        src/app-commands-subscriptions-constants.h
        src/current-time.cpp
        src/current-time.h
        src/Makefile
        src/Makefile.am
        src/Makefile.in
        src/program-configuration.cpp
        src/program-configuration.h
        src/structs.h
        Makefile
        Makefile.am
        Makefile.in)
