noinst_LIBRARIES = libhelper.a

libhelper_a_SOURCES = callback.h \
empty.h \
fatal-error.h \
traced-callback.h\
random-variable.cpp random-variable.h \
rng-seed-manager.cpp rng-seed-manager.h \
rng-stream.cpp rng-stream.h \
scheduler.cpp scheduler.h \
trace-manager.cpp trace-manager.h \
vector.cpp vector.h

