noinst_LIBRARIES = libapplication.a

libapplication_a_SOURCES = node.cpp node.h \
split.h \
subscription-helper.cpp subscription-helper.h \
mobile-node.cpp mobile-node.h \
fixed-station.cpp fixed-station.h \
traffic-light.cpp traffic-light.h \
traci-helper.cpp traci-helper.h \
message-scheduler-helper.cpp message-scheduler-helper.cpp

SUBDIRS = helper model