noinst_LIBRARIES = libuc.a

libuc_a_SOURCES = behaviour-uc-factory.cpp behaviour-uc-factory.h \
behaviour-uc-node.cpp behaviour-uc-node.h \
behaviour-uc-rsu.cpp behaviour-uc-rsu.h \
behaviour-uc-tmc.cpp behaviour-uc-tmc.h \
vehicle.cpp vehicle.h \
vehicleManager.cpp vehicleManager.h \
jsonReader.cpp jsonReader.h
