noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES = behaviour-node.cpp behaviour-node.h \
behaviour-rsu.cpp behaviour-rsu.h \
protocols.cpp protocols.h \
data-manager.cpp data-manager.h \
behaviour.cpp behaviour.h \
behaviour-factory.cpp behaviour-factory.h \
headers.cpp headers.h \
ics-interface.cpp ics-interface.h \
common.h common.cpp \
node-sampler.cpp node-sampler.h

SUBDIRS = test
