noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES = behaviour-node.cpp behaviour-node.h \
behaviour-rsu.cpp behaviour-rsu.h \
behaviour.cpp behaviour.h \
TMCBehaviour.h \
behaviour-factory.h \
headers.cpp headers.h \
ics-interface.cpp ics-interface.h \
common.h common.cpp \
node-sampler.cpp node-sampler.h
