noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES = behaviour-node.cpp behaviour-node.h \
behaviour-rsu.cpp behaviour-rsu.h \
behaviour.cpp behaviour.h \
headers.cpp headers.h \
ics-interface.cpp ics-interface.h \
TMCBehaviour.h TMCBehaviour.cpp \
BaseVehicle.h BaseVehicle.cpp \
common.h common.cpp \
node-sampler.cpp node-sampler.h \
behaviour-factory.h
